<resources>
    <string name="app_name">Project Mob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_ellipse">Ellipse</string>
    <string name="menu_triangle">Triangle</string>
    <string name="menu_rectangle">Rectangle</string>
    <string name="menu_circle">Circle</string>
    <string name="radius">Radius</string>
    <string name="calculate">Calculate</string>
    <string name="project_mobile">Project Mobile</string>
</resources>